--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.5.0",
+    "process": "^0.11.10",
+    "parcel": "^2.5.0",
     "sass": "^1.37.5"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "fracty": "^1.0.9",
-    "parcel": "^2.5.0",
     "regenerator-runtime": "^0.13.7"
   }
 }
